--- a/index.html
+++ b/index.html
@@ -199,6 +199,10 @@
         <span class="fab-text">打赏</span>
     </div>
 
+    <!-- 第三方库 -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/blueimp-md5@2.19.0/js/md5.min.js"></script>
+    
     <script src="js/app.js"></script>
     <script src="js/tools.js"></script>
 </body>
